Revert list collection change