@@ -24,6 +24,7 @@ import java.util.UUID;
 import java.util.regex.MatchResult;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -121,7 +122,7 @@ class TokenTests extends AbstractApplicationTest {
                 .map(MatchResult::group)
                 .map(match -> match.replace("║ ", ""))
                 .map(UUID::fromString)
-                .toList();
+                .collect(Collectors.toList());
 
         assertAll(() -> assertTrue(s2.isEmpty(), "Should have succeeded"),
                 () -> assertEquals("", stdErr.toString(), "Should be empty"));
