@@ -25,6 +25,7 @@ import org.slf4j.LoggerFactory;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -86,7 +87,7 @@ public class AttestationUnitTests {
                 .stream()
                 .map(Group.GroupMemberComponent::getEntity)
                 .map(Reference::getReference)
-                .toList();
+                .collect(Collectors.toList());
         final String expectedMessage = String.format("Organization %s is attesting a %s purpose between provider %s and patient(s) %s", performer.getWhoReference().getReference(), reason.getCode(), performer.getOnBehalfOfReference().getReference(), attributedPatients);
         assertEquals(expectedMessage, listAppender.list.get(0).getFormattedMessage(), "Should have correct message");
     }
@@ -116,7 +117,7 @@ public class AttestationUnitTests {
                 .stream()
                 .map(Group.GroupMemberComponent::getEntity)
                 .map(Reference::getReference)
-                .toList();
+                .collect(Collectors.toList());
         final String expectedMessage = String.format("Organization %s is attesting a %s purpose between provider %s and patient(s) %s for roster %s", performer.getWhoReference().getReference(), reason.getCode(), performer.getOnBehalfOfReference().getReference(), attributedPatients, new IdType("Group", rosterID.toString()));
         assertEquals(expectedMessage, listAppender.list.get(0).getFormattedMessage(), "Should have correct message");
     }
@@ -148,7 +149,7 @@ public class AttestationUnitTests {
                 .stream()
                 .map(Group.GroupMemberComponent::getEntity)
                 .map(Reference::getReference)
-                .toList();
+                .collect(Collectors.toList());
         final String expectedMessage = String.format("Organization %s is attesting a %s purpose between provider %s and patient(s) %s for roster %s", performer.getWhoReference().getReference(), reason.getCode(), performer.getOnBehalfOfReference().getReference(), attributedPatients, new IdType("Group", rosterID.toString()));
         assertEquals(expectedMessage, listAppender.list.get(0).getFormattedMessage(), "Should have correct message");
     }
@@ -180,7 +181,7 @@ public class AttestationUnitTests {
                 .stream()
                 .map(Group.GroupMemberComponent::getEntity)
                 .map(Reference::getReference)
-                .toList();
+                .collect(Collectors.toList());
         final String expectedMessage = String.format("Organization %s is attesting a %s purpose between provider %s and patient(s) %s for roster %s", performer.getWhoReference().getReference(), reason.getCode(), performer.getOnBehalfOfReference().getReference(), attributedPatients, new IdType("Group", rosterID.toString()));
         assertEquals(expectedMessage, listAppender.list.get(0).getFormattedMessage(), "Should have correct message");
     }
