@@ -21,6 +21,7 @@ import java.time.ZonedDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -127,9 +128,9 @@ public class JobResourceTest {
 
         final var runningJob = queue.getJobBatches(jobID).get(0);
         runningJob.fetchNextPatient(AGGREGATOR_ID);
-        JobQueueBatch.validResourceTypes.stream()
+        final var results = JobQueueBatch.validResourceTypes.stream()
                 .map(resourceType -> runningJob.addJobQueueFile(resourceType, 0, 1))
-                .toList();
+                .collect(Collectors.toList());
 
         queue.completeBatch(runningJob, AGGREGATOR_ID);
 
@@ -282,9 +283,9 @@ public class JobResourceTest {
 
         final var runningJob = queue.getJobBatches(jobID).get(0);
         runningJob.fetchNextPatient(AGGREGATOR_ID);
-        JobQueueBatch.validResourceTypes.stream()
+        final var results = JobQueueBatch.validResourceTypes.stream()
                 .map(resourceType -> runningJob.addJobQueueFile(resourceType, 0, 1))
-                .toList();
+                .collect(Collectors.toList());
 
         queue.completeBatch(runningJob, AGGREGATOR_ID);
 
