@@ -14,6 +14,7 @@ import java.util.Objects;
 import java.util.UUID;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 /**
  * Helper class for extracting various features from FHIR resources
@@ -103,7 +104,7 @@ public class FHIRExtractors {
                 }
             })
             .filter(Objects::nonNull)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     /**
@@ -230,7 +231,7 @@ public class FHIRExtractors {
         return identifiers
                 .stream()
                 .filter(id -> id.getSystem().equals(system.getSystem()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
