@@ -5,6 +5,7 @@ import org.hl7.fhir.dstu3.model.*;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 //This is now the official DPC FHIR Group Generator. To be used by any service for test purposes.
 public class FHIRGroupBuilder {
@@ -56,7 +57,7 @@ public class FHIRGroupBuilder {
         List<IdType> patientIdTypes = Arrays.stream(patientIds)
                 .map(IdType::new)
                 .map(type -> new IdType("Patient", type.getIdPart()))
-                .toList();
+                .collect(Collectors.toList());
 
         return withPatients(patientIdTypes.toArray(IdType[]::new));
     }
@@ -64,7 +65,7 @@ public class FHIRGroupBuilder {
     public FHIRGroupBuilder withPatients(UUID... patientUUIDs){
         List<IdType> patientIdTypes = Arrays.stream(patientUUIDs)
                 .map(uuid -> new IdType("Patient", uuid.toString()))
-                .toList();
+                .collect(Collectors.toList());
 
         return withPatients(patientIdTypes.toArray(IdType[]::new));
     }
